chore: Include dep updates in Changelog

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -102,15 +102,15 @@ changelog:
     exclude:
       - "^test:"
       - "^test\\("
-      - "^chore: update$"
-      - "^chore: docs$"
-      - "^docs: update$"
+      #- "^chore: update$"
+      #- "^chore: docs$"
+      #- "^docs: update$"
       - "^chore: schema$"
       - "^chore: typo$"
       - "^chore: auto-update generated files$"
       - "^chore: update schema$"
       - "^chore: schema update$"
-      - "^chore\\(deps\\): "
+      #- "^chore\\(deps\\): "
       - "^(build|ci): "
       - "merge conflict"
       - "merge conflict"
